# Bamboo

./: .gitignore  a  build.gradle  新建文本文档.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Decode.cpp  Decode.h  EGLUtil.cpp  EGLUtil.h  native-lib.cpp
app/src/main/cpp/audio/: AudioPlayer.cpp  AudioPlayer.h
app/src/main/cpp/decode/: Decode.cpp  Decode.h
app/src/main/cpp/util/: BlockQueue.cpp  BlockQueue.h  EGLUtil.cpp  EGLUtil.h  GLUtil.cpp  GLUtil.h  LogUtil.h  PlayerCallJava.cpp  PlayerCallJava.h  PlayerStatuts.cpp  PlayerStatuts.h
app/src/main/cpp/video/: GLUtil.cpp  GLUtil.h  PlayerView.cpp  PlayerView.h  VideoPlayer.cpp  VideoPlayer.h
app/src/main/res/anim/: popupwindow_enter_animation.xml
app/src/main/res/drawable/: ic_launcher_background.xml  personal_im_follow_btn.xml  personal_im_sendmsg_btn.xml  play_and_pause_btn_background.xml  recommend_living_live_tag.xml  recommend_living_livw_user.xml  start_login_btn_background.xml  toolbar_gradient_background.xml
app/src/main/res/drawable-v24/: popupwindow_btn_background.xml
app/src/main/res/layout/: activity_add_contact.xml  activity_apply_contact.xml  activity_change_im.xml  activity_chat.xml  activity_friend.xml  activity_login_code.xml  activity_login_pwd.xml  activity_main.xml  activity_main_finish.xml  activity_personal_im.xml  activity_recode_video.xml  activity_recommend_video_article.xml  activity_recommend_video_detailed.xml  activity_register.xml  activity_select_tag.xml  activity_start.xml  activity_test.xml  activity_wait.xml  activity_write_matters.xml  dialog_person_change_im_birthday.xml  dialog_person_change_im_head.xml  dialog_person_change_im_nickname.xml  dialog_person_change_im_sex.xml  drawerlayout_head.xml  fragment_contact_apply.xml  fragment_contact_receive.xml  fragment_discover.xml  fragment_homepage.xml  fragment_homepage_finish.xml  fragment_matters.xml  fragment_matters_follow.xml  fragment_message.xml  fragment_mine.xml  fragment_near.xml  fragment_personal_main_collect.xml  fragment_personal_main_contributes.xml  fragment_personal_main_dynamics.xml  fragment_personal_main_pager.xml  fragment_recommend.xml  fragment_recommend_living.xml  (+23 more)
app/src/main/res/menu/: drawerlayout_menu.xml  friend_toolbar_menu.xml  matters_toolbar_menu.xml  message_toolbar_menu.xml  person_im_menu.xml  select_tag_menu.xml  write_matters_menu.xml
app/src/main/res/raw/: select_tag_frag_shade_unchoose.glsl  select_tag_vertex_shade_unchoose.glsl  test_frag_shader.glsl  test_vertex_shader.glsl  yuv_frag_shader.glsl  yuv_vertex_shader.glsl
easeui/: build.gradle  local.properties
easeui/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
test/: build.gradle
(+172 files in other folders)
